# molmodel

./: CMakeLists.txt  Dockerfile  README.md
OpenMMPlugin/: CMakeLists.txt  OpenMMPlugin.cpp
cmake/: MolmodelConfig.cmake.in
cmake/pkgconfig/: molmodel.pc.in
cmake_modules/: FindOpenMM.cmake  FindSimbody.cmake
examples/: CMakeLists.txt  ExampleLoadPdb.cpp  ExampleLoadPdb2.cpp  ExampleTwoArgonAtoms.cpp  ExampleTwoEthanes.cpp  svn-commit.2.tmp  svn-commit.tmp
include/molmodel/internal/: Biotype.h  Compound.h  DNA.h  DuMMForceFieldSubsystem.h  Element.h  Exceptions.h  GrinPointer.h  Ions.h  Linkage.h  MolecularMechanicsSystem.h  NA.h  PDBReader.h  Pdb.h  Protein.h  RNA.h  VoxelHash.h  common.h
sharedTarget/: CMakeLists.txt
src/: Biotype.cpp  BiotypeRep.h  BondGeometry.cpp  Compound.cpp  CompoundAtom.h  CompoundRep.h  DuMMForceFieldSubsystem.cpp  DuMMForceFieldSubsystemRep.cpp  DuMMForceFieldSubsystemRep.h  Element.cpp  ElementRep.h  PDBReader.cpp  Pdb.cpp  PeriodicVmdReporter.cpp  Representation.cpp  Representation.h  SimbodyVersionCheck.h  TinkerAmber99.cpp  Util.h  VmdConnection.cpp  imd.h  mol.cpp  mol.h  vmdsock.cpp  vmdsock.h
src/gbsa/: CpuObc.cpp  SimTKOpenMMRealType.h  SimTKOpenMMWindowLinux.h
staticTarget/: CMakeLists.txt
tests/: CMakeLists.txt  TestAtomTargetLocations.cpp  TestBiotypeSelfCode.cpp  TestCompoundTransforms.cpp  TestDihedrals2.cpp  TestDuMMForces.cpp  TestEthane.cpp  TestFitMagnesiums.cpp  TestLoadPdb.cpp  TestLoadVariantRnaAtomNames.cpp  TestMethanol.cpp  TestNucleotide2.cpp  TestOxygenMolecule.cpp  TestPdb.cpp  TestProteinDihedrals.cpp  TestRiboseMobilizer.cpp  TestSerine.cpp  TestShortPdbLines.cpp  TestVelocityRescalingThermostat.cpp  TestWriteDefaultPdb.cpp
tests/adhoc/: TestMemoryUse.cpp  TestSodiumWithViz.cpp
